# Mlops_git_exercise

./: README.md  helloworld.py  helloworld_BACKUP_1166.py  helloworld_BASE_1166.py  helloworld_REMOTE_1166.py  pyproject.toml  requirements-dev.txt
src/: __init__.py  main.py
tests/: conftest.py  test_main.py
